--- a/historia.html
+++ b/historia.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Historia - Sociedad Cooperativa Pirapó Agrícola Ltda.</title>
   <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .cultivos img:hover {
       transform: scale(1.05);
@@ -105,5 +106,6 @@
 
 <footer>© 2025 Sociedad Cooperativa Pirapó Agrícola Ltda.</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
