--- a/servicios.html
+++ b/servicios.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Servicios - Cooperativa Pirapó</title>
   <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav>
