actualizacion de servicios

--- a/servicios.html
+++ b/servicios.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
 <nav>
   <div class="nav-container">
     <a href="index.html">
@@ -21,10 +21,240 @@
     </ul>
   </div>
 </nav>
+
 <section>
   <h1>Servicios</h1>
-  <p>Ofrecemos los siguientes servicios.,..</p>
+  <p>La Cooperativa Pirapó ofrece los siguientes servicios para sus socios y la comunidad:</p>
 </section>
-<footer>© 2025 Cooperativa Pirapó Agrícola Ltada..</footer>
+
+<section>
+  <h2>Oficina Central</h2>
+  <img src="img/oficina_central.jpg" alt="Oficina Central" class="img-fluid mb-3 rounded shadow">
+  <p>
+    Dentro de la Oficina Central se encuentran los departamentos de Gerencia, Secretaría, Contabilidad, Tesorería, Comercial, Informática y Recursos Humanos.<br><br>
+    Los socios acceden a servicios de:
+    <ul>
+      <li>Cuenta Corrientes y Caja de Ahorros</li>
+      <li>Créditos para producción, inversiones como adquisiciones de Maquinarias Agrícolas y de Terrenos, mejoramiento de suelos (Cal Agrícola) y Créditos Especiales.</li>
+    </ul>
+    Todo esto acorde a las Normativas del INCOOP y la SEPRELAD.
+  </p>
+</section>
+
+<section>
+  <h2>Silos</h2>
+  <p class="mb-4">
+    Cuenta con dos silos que realizan el acopio de toda la producción de sus cooperadores.
+  </p>
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/silo_centro.JPG" alt="Silo Centro" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h4>Silo Centro</h4>
+      <p>
+        Ubicado en Pirapó Centro, cuenta con 7 pre-limpieza y 3 secaderos con capacidad estática total de 39.000 tn.
+        En él se recepcionan: Soja, Trigo, Maíz, Sorgo, Canola y Girasol.
+      </p>
+    </div>
+  </div>
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/silo_13.JPG" alt="Silo Km 13" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h4>Silo Km 13</h4>
+      <p>
+        Ubicado sobre la Ruta Py-06, Km 76. Cuenta con una capacidad estática total de 29.000 tn, con 3 pre-limpieza y 2 secaderos. Se recepcionan: Soja, Trigo y Maíz.
+      </p>
+    </div>
+  </div>
+</section>
+
+
+<section>
+  <h2>Asistencia Técnica</h2>
+  <div class="d-flex flex-wrap gap-3 justify-content-center">
+    <img src="img/asistencia_tecnica.jpg" alt="Asistencia Técnica" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="img/servicio_cal.jpg" alt="Corrección de suelo" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="img/cosecha_dron.jpg" alt="Cosecha con dron" class="img-fluid rounded shadow" style="max-width:300px;">
+  </div>
+  <p class="mt-3">
+    El sector de Asistencia Técnica fue creado en el año 2008, con el objetivo de brindar asesoramiento y apoyo a los socios en la producción agrícola. Los equipos técnicos capacitados acompañan a los socios productores desde la época de siembra hasta su cosecha.<br><br>
+    También realizan múltiples actividades como:
+    <ul>
+      <li>Charlas de interés para los socios</li>
+      <li>Días de Campo</li>
+      <li>Parcelas Experimentales</li>
+      <li>Giras educativas</li>
+      <li>Competencia de alta productividad de soja</li>
+    </ul>
+    Servicios:
+    <ul>
+      <li>Corrección de suelo</li>
+      <li>Aplicación de Boro, Potasio</li>
+      <li>Medición de la curva de nivel</li>
+    </ul>
+  </p>
+</section>
+
+<section>
+  <h2>Insumos Agrícolas</h2>
+
+    <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/fertilizantes.jpeg" style="width: 300px;" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <p class="mt-3">
+    Fue inaugurada la nueva oficina el 01 de diciembre del 2020.<br>
+    Este departamento, en conjunto con profesionales de asistencia técnica y semillería ofrecen asesoramiento a los socios productores.<br><br>
+    Se encargan en proveer insecticidas, fungicidas, adherentes, herbicidas, fertilizantes y semillas.<br>
+    Cuenta con depósitos amplios, organizado con rack y pallet, para poder suministrar de manera fluida los insumos a los productores socios.
+  </p>
+   <div class="d-flex flex-wrap gap-3 justify-content-center">
+    <img src="img/insumos.JPG" alt="Insumos" class="img-fluid rounded shadow" style="max-width:200px;">
+    <img src="img/abono.jpeg" alt="Abono" class="img-fluid rounded shadow" style="max-width:200px;">
+
+  </div>
+    </div>
+  </div>
+</section>
+
+<section>
+    <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/semillas.jpg" style="width: 400px;" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h2>Semillería</h2>
+      <p>
+        Inspirados en la sustentabilidad y con un gran enfoque en la productividad distribuye, variedades de semillas certificadas de soja, maíz, trigo, sorgo y otros cultivos que cumplen con los estándares legales de producción.<br><br>
+        Cuenta con depósitos aptos para la preservación de las condiciones originales de las semillas, además de cámaras frías para el almacenamiento de aquellas que requieran condiciones ambientales controladas, garantizando así la conservación de la calidad genética, física y fitosanitaria de las mismas.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Estación de Servicio</h2>
+  <div class="d-flex flex-wrap gap-3 justify-content-center">
+    <img src="pasantia/img/sisterna.jpeg" alt="Estación de servicio" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="pasantia/img/aceites.jpeg" alt="Aceites" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="pasantia/img/lubricantes.jpeg" alt="Lubricantes" class="img-fluid rounded shadow" style="max-width:300px;">
+  </div>
+  <p class="mt-3">
+    <strong>Estación de Servicios Centro:</strong> dispone a la venta combustibles, lubricantes variados, gas GLP y todo tipo de productos necesario en automotriz. También realiza servicio de cambio de aceite con mano de obra gratuita.<br><br>
+    <strong>Estación de servicios Km 13:</strong> siendo una sucursal, se limita al suministro de combustibles, lubricantes, gas GLP y algunos productos necesarios en automotriz.
+  </p>
+</section>
+
+<section>
+  <h2>Supermercado</h2>
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/superoriental.jpeg" alt="Productos orientales" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h4>Productos orientales</h4>
+      <p>Aderezos, condimentos, lamen, sake, snacks, soju y muchos más.</p>
+    </div>
+  </div>
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/superroperia.jpeg" alt="Ropería y Zapatería" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h4>Ropería y Zapatería</h4>
+      <p>Prendas y calzados con varias marcas reconocidas para damas, caballeros y niños/as.</p>
+    </div>
+  </div>
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/verduleria.jpeg" alt="Verdulería" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h4>Verdulería</h4>
+      <p>Verduras frescas, el 40% de sus productos son proveídos por productores locales.</p>
+    </div>
+  </div>
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/carniceria.jpg" alt="Carnicería" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h4>Carnicería</h4>
+      <p>Carnes de excelente calidad con controles higiénicos, en alianza con productores locales.</p>
+    </div>
+  </div>
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/deposito.jpeg" alt="Depósito al por mayor" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <h4>Depósito al por mayor</h4>
+      <p>Para los socios y clientes que realizan sus compras en volumen mayor.</p>
+    </div>
+  </div>
+
+  <p class="mt-4">
+    En julio de 2005, se habilitó el supermercado más grande y completo del Distrito. Los clientes podrán encontrar diferentes productos desde canastas básicas, carnicerías, panificados, artículos orientales, roperías y mucho más al mejor precio de la zona.
+  </p>
+</section>
+
+
+<section>
+  <h2>Ferretería</h2>
+  <div class="d-flex flex-wrap gap-3 justify-content-center">
+    <img src="pasantia/img/ferr.jpeg" alt="Ferretería" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="pasantia/img/ferr1.jpeg" alt="Ferretería" class="img-fluid rounded shadow" style="max-width:300px;">
+  </div>
+  <p class="mt-3">
+    En edificio compartido con el Supermercado, en el 2005, se reinauguró la ferretería más grande y completa del Distrito, con un moderno salón de ventas y con los mejores controles de stock a través de códigos de barras.<br><br>
+    Ofrece artículos de:
+    <ul>
+      <li>Ferretería en general</li>
+      <li>Repuestos para maquinarias agrícolas</li>
+      <li>Equipos de compresores</li>
+      <li>Soldaduras</li>
+      <li>Motosierras</li>
+      <li>Prensado de mangueras hidráulicas, etc.</li>
+    </ul>
+  </p>
+</section>
+
+<section>
+  <h2>Materiales de Construcción</h2>
+  <div class="d-flex flex-wrap gap-3 justify-content-center">
+    <img src="pasantia/img/materiales.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="pasantia/img/mat3.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="pasantia/img/mat1.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="pasantia/img/mat2.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+  </div>
+  <p class="mt-3">
+    Habilitado en junio de 2015, con el objetivo de suministrar a los socios y público en general los materiales de construcciones con una buena relación de calidad y precio.<br>
+    Provee productos de las marcas más solicitadas del mercado, atendiendo a las necesidades de cada comprador. Ofreciendo a los suyos, la mejor atención posible.<br><br>
+    <strong>Productos en venta:</strong>
+    <ul>
+      <li>Neumáticos</li>
+      <li>Hierros</li>
+      <li>Pinturas</li>
+      <li>Caños</li>
+      <li>Cementos</li>
+    </ul>
+  </p>
+</section>
+
+<footer>
+  © 2025 Cooperativa Pirapó Agrícola Ltda.
+</footer>
+
 </body>
 </html>
