--- a/servicios.html
+++ b/servicios.html
@@ -138,18 +138,31 @@
   </div>
 </section>
 
+
+
+
 <section>
   <h2>Estación de Servicio</h2>
-  <div class="d-flex flex-wrap gap-3 justify-content-center">
-    <img src="pasantia/img/sisterna.jpeg" alt="Estación de servicio" class="img-fluid rounded shadow" style="max-width:300px;">
-    <img src="pasantia/img/aceites.jpeg" alt="Aceites" class="img-fluid rounded shadow" style="max-width:300px;">
-    <img src="pasantia/img/lubricantes.jpeg" alt="Lubricantes" class="img-fluid rounded shadow" style="max-width:300px;">
-  </div>
-  <p class="mt-3">
-    <strong>Estación de Servicios Centro:</strong> dispone a la venta combustibles, lubricantes variados, gas GLP y todo tipo de productos necesario en automotriz. También realiza servicio de cambio de aceite con mano de obra gratuita.<br><br>
-    <strong>Estación de servicios Km 13:</strong> siendo una sucursal, se limita al suministro de combustibles, lubricantes, gas GLP y algunos productos necesarios en automotriz.
+
+    <div class="row mb-4 align-items-center">
+    <div class="col-md-4">
+      <img src="img/surtidor.jpg" style="width: 300px;" class="img-fluid rounded shadow">
+    </div>
+    <div class="col-md-8">
+      <p class="mt-3">
+    <strong>Estación de Servicio Centro:</strong> dispone a la venta combustibles, lubricantes variados, gas GLP y todo tipo de productos necesario en automotriz. También realiza servicio de cambio de aceite con mano de obra gratuita.<br><br>
+    <strong>Estación de servicio Km 13:</strong> siendo una sucursal, se limita al suministro de combustibles, lubricantes, gas GLP y algunos productos necesarios en automotriz.
   </p>
+   <div class="d-flex flex-wrap gap-3 justify-content-center">
+    <img src="img/sisterna.jpg" alt="Insumos" class="img-fluid rounded shadow" style="max-width:200px;">
+    <img src="img/aceites.jpg" alt="Abono" class="img-fluid rounded shadow" style="max-width:200px;">
+
+  </div>
+    </div>
+  </div>
 </section>
+
+
 
 <section>
   <h2>Supermercado</h2>
@@ -213,8 +226,8 @@
 <section>
   <h2>Ferretería</h2>
   <div class="d-flex flex-wrap gap-3 justify-content-center">
-    <img src="pasantia/img/ferr.jpeg" alt="Ferretería" class="img-fluid rounded shadow" style="max-width:300px;">
-    <img src="pasantia/img/ferr1.jpeg" alt="Ferretería" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="img/ferr.jpeg" alt="Ferretería" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="img/ferr1.jpeg" alt="Ferretería" class="img-fluid rounded shadow" style="max-width:300px;">
   </div>
   <p class="mt-3">
     En edificio compartido con el Supermercado, en el 2005, se reinauguró la ferretería más grande y completa del Distrito, con un moderno salón de ventas y con los mejores controles de stock a través de códigos de barras.<br><br>
@@ -233,10 +246,8 @@
 <section>
   <h2>Materiales de Construcción</h2>
   <div class="d-flex flex-wrap gap-3 justify-content-center">
-    <img src="pasantia/img/materiales.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
-    <img src="pasantia/img/mat3.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
-    <img src="pasantia/img/mat1.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
-    <img src="pasantia/img/mat2.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="img/materiales.jpg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="img/mat3.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
   </div>
   <p class="mt-3">
     Habilitado en junio de 2015, con el objetivo de suministrar a los socios y público en general los materiales de construcciones con una buena relación de calidad y precio.<br>
@@ -249,6 +260,10 @@
       <li>Caños</li>
       <li>Cementos</li>
     </ul>
+    <div>
+    <img src="img/mat2.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+    <img src="img/mat1.jpeg" alt="Materiales" class="img-fluid rounded shadow" style="max-width:300px;">
+    </div>
   </p>
 </section>
 
