--- a/historia.html
+++ b/historia.html
@@ -1,111 +1,181 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Historia - Sociedad Cooperativa Pirapó Agrícola Ltda.</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Historia - Cooperativa Pirapó</title>
+
+  <!-- Estilos -->
   <link rel="stylesheet" href="css/estilos.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
+
   <style>
-    .cultivos img:hover {
-      transform: scale(1.05);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      box-shadow: 0 4px 20px rgba(0, 100, 0, 0.3);
+    body {
+      background-color: #1b1f2a;
+      color: #cfdce2;
+      font-family: 'Segoe UI', sans-serif;
     }
 
-    .cultivos img {
-      width: 150px;
-      border-radius: 10px;
+    h1, h2 {
+      color: #00ffc3;
     }
 
-    .section-title {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #123456;
+    .navbar {
+      background: lab(37.97% -36.05 14.93);
+      box-shadow: 0 4px 10px rgba(0, 255, 200, 0.2);
     }
 
-    .section-content {
-      line-height: 1.8;
+    .navbar-brand img {
+      height: 60px;
+    }
+
+    section {
+      padding: 60px 15px;
+    }
+
+    .block {
+      background: linear-gradient(145deg, #232c3f, #2f3e56);
+      border-radius: 1.2rem;
+      box-shadow: 0 8px 20px rgba(0, 255, 200, 0.15);
+      margin-bottom: 40px;
+      overflow: hidden;
+    }
+
+    .block img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .block-content {
+      padding: 30px;
+    }
+
+    .block:hover {
+      transform: translateY(-6px);
+      transition: all 0.3s ease;
+      box-shadow: 0 12px 25px rgba(0, 255, 200, 0.25);
+    }
+
+    .text-justify {
       text-align: justify;
-      font-size: 1.1rem;
     }
 
-    .negrita {
-      font-weight: bold;
-      color: #004d40;
+    footer {
+      background: #0f172a;
+      border-top: 2px solid #00ffc3;
+    }
+
+    footer a:hover {
+      color: #00ffc3 !important;
     }
   </style>
 </head>
 <body>
 
-
-<nav>
-  <div class="nav-container">
-    <a href="index.html">
-      <img src="img/logo_sin_fondo.png" alt="Logo Cooperativa" class="logo">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">
+      <img src="img/logo_sin_fondo.png" alt="Logo Cooperativa">
     </a>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="historia.html">Historia</a></li>
-      <li><a href="servicios.html">Servicios</a></li>
-      <li><a href="contacto.php">Contacto</a></li>
-    </ul>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="menuNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link active" href="historia.html">Historia</a></li>
+        <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="contacto.php">Contacto</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
+<!-- Título principal -->
+<section class="text-center" data-aos="fade-down">
+  <div class="container">
+    <h1 class="mb-4">Nuestra Historia</h1>
+    <p class="lead text-justify">Un recorrido desde nuestros orígenes hasta el presente.</p>
+  </div>   
+</section>
 
-<section>
-  <h1 class="section-title">Nuestra Historia</h1>
-<div style="text-align: center;">
-  <img src="img/inicios.png"  style="width:70%; border-radius:10px; margin-bottom: 1rem;">
-</div>
-  <p class="section-content">
-    Nuestra historia se remonta a <span class="negrita">1960</span>, cuando un grupo de inmigrantes recién llegados de Japón comenzaron a colonizar la región de Alto Paraná. El <span class="negrita">3 de noviembre de 1960</span>, representantes de varias familias se reunieron en el almacén del Campamento 1 en Acá Carayá para la primera asamblea, dando así nacimiento a la <span class="negrita">"Cooperativa 1ª Limitada Agropecuaria Alto Paraná"</span>.
-  </p>
-  <p class="section-content">
-    En esa reunión se aprobaron principios, creencias y juramentos fundamentales. Se eligieron los primeros miembros del Consejo de Administración y del Consejo de Vigilancia. Al finalizar, se entonó el himno nacional japonés "Kimigayo".
-  </p>
-
-  <h2 class="section-title">La Primera Asamblea General</h2>
-<div style="text-align: center;">
-  <img src="img/inmigrantes.jpg"  style="width:70%; border-radius:10px; margin-bottom: 1rem;">
-</div>
-  <p class="section-content">
-    Posteriormente se eligieron a:<br>
-    <span class="negrita">Toshinao Fujiwara</span> como Presidente de la Cooperativa,<br>
-    <span class="negrita">Masahito Shinoto</span> como Gerente General,<br>
-    <span class="negrita">Isamu Takaoka</span> como Presidente de la Junta de Vigilancia.<br><br>
-    Se estableció la primera oficina administrativa en el depósito número 1 de Acá Carayá e ingresamos oficialmente a la Confederación de Cooperativas de Itapúa.
-  </p>
-  <p class="section-content">
-    El <span class="negrita">18 de marzo de 1961</span> se realizó una asamblea extraordinaria donde se cambió el nombre a <span class="negrita">"Sociedad Cooperativa Agropecuaria Alto Paraná Limitada"</span>. Finalmente, el <span class="negrita">6 de octubre de 1961</span> se aprobó oficialmente el nombre actual: <strong>Sociedad Cooperativa Pirapó Agrícola Limitada</strong>.
-  </p>
-
-  <h2 class="section-title">Los primeros cultivos</h2>
-  <p class="section-content">
-    Tan pronto como llegaron los inmigrantes y se estableció la cooperativa, también comenzó el proceso de producción. Los primeros cultivos de los agricultores (además de los cultivos para el consumo familiar) fueron el <strong>tung</strong>, el <strong>mate</strong> y el <strong>kiri</strong>. Los árboles de tung dan frutos todos los años, de los que se puede extraer aceite. El problema radica en el tiempo de espera entre la siembra y la primera cosecha, que más o menos comienza al cuarto año de convertirse en árbol. Comenzar de nuevo todo el proceso fue un poco difícil para las familias que llegaron años después de la primera, por lo que comenzaron a pasar del cultivo a largo plazo como el tung al cultivo a corto plazo.
-  </p>
-  
-<div style="text-align: center;">
-  <img src="img/tung.jpeg"  style="width:25%; border-radius:10px; margin-bottom: 1rem;">
-  <img src="img/inmigrantes2.jpg"  style="width:35%; border-radius:10px; margin-bottom: 1rem;">
-</div>
-
-  <p class="section-content">
-    La colonia inició su primera producción de <strong>soja</strong> en 1962. También se presentaron otros cultivos de corto plazo, entre los que se destacaron el <strong>algodón</strong>, el <strong>maíz</strong>, el <strong>maní</strong> y el <strong>frijol</strong>.
-  </p>
-
-  <div class="cultivos" style="display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
-    <img src="img/soja.jpeg" alt="Soja">
-    <img src="img/algodon.jpeg" alt="Algodón">
-    <img src="img/maiz.jpeg" alt="Maíz">
-    <img src="img/frijol.jpeg" alt="Frijol">
+<!-- Bloque 1: Fundación -->
+<section data-aos="fade-up">
+  <div class="container">
+    <div class="block">
+      <img src="img/inmigrantes.jpg" style="width: 400px; justify-content: center;" alt="Fundadores de la cooperativa">
+      <div class="block-content">
+        <h2><i class="bi bi-flag me-2"></i>Fundación en 1960</h2>
+        <p class="text-justify">
+          La Cooperativa Pirapó fue fundada el 3 de noviembre de 1960 por inmigrantes japoneses con el objetivo de crear una comunidad agrícola próspera. Estos pioneros trabajaron juntos para superar los desafíos iniciales de una región con poca infraestructura.
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 
-<footer>© 2025 Sociedad Cooperativa Pirapó Agrícola Ltda.</footer>
+<!-- Bloque 2: Reconocimiento Legal -->
+<section data-aos="fade-up">
+  <div class="container">
+    <div class="block">
+      <img src="img/resolucion127.jpg" alt="Resolución ministerial">
+      <div class="block-content">
+        <h2><i class="bi bi-file-earmark-text me-2"></i>Reconocimiento Legal</h2>
+        <p class="text-justify">
+          El 6 de marzo de 1961, la cooperativa fue reconocida oficialmente mediante la Resolución N.º 127 del Ministerio de Agricultura y Ganadería, lo que marcó el inicio de su camino formal hacia el desarrollo regional.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
+<!-- Bloque 3: Expansión y Tecnología -->
+<section data-aos="fade-up">
+  <div class="container">
+    <div class="block">
+      <img src="img/expansion.jpg" alt="Maquinaria agrícola">
+      <div class="block-content">
+        <h2><i class="bi bi-gear-wide-connected me-2"></i>Expansión y Tecnología</h2>
+        <p class="text-justify">
+          Durante los años 70 y 80, la cooperativa apostó por la mecanización agrícola, capacitaciones técnicas y diversificación de cultivos, consolidando su liderazgo en la región como una institución moderna y comprometida con el progreso.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Bloque 4: Cooperativa Hoy -->
+<section data-aos="fade-up">
+  <div class="container">
+    <div class="block">
+      <img src="img/actualidad.jpg" alt="Sede actual de la cooperativa">
+      <div class="block-content">
+        <h2><i class="bi bi-building me-2"></i>La Cooperativa Hoy</h2>
+        <p class="text-justify">
+          Actualmente, la Cooperativa Pirapó es referente en el país por su compromiso con el desarrollo sostenible, los valores solidarios y la mejora continua de sus servicios para socios, productores y la comunidad en general.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Pie de página -->
+<footer class="text-white text-center py-4 mt-5">
+  <p>© 2025 Cooperativa Pirapó Agrícola Ltda.</p>
+  <div class="d-flex justify-content-center gap-4">
+    <a href="#" class="text-white"><i class="bi bi-facebook fs-4"></i></a>
+    <a href="#" class="text-white"><i class="bi bi-instagram fs-4"></i></a>
+    <a href="#" class="text-white"><i class="bi bi-whatsapp fs-4"></i></a>
+  </div>
+</footer>
+
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>AOS.init({ once: true });</script>
 </body>
 </html>
