--- a/index.html
+++ b/index.html
@@ -1,85 +1,237 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inicio - Cooperativa Pirapó</title>
+
+  <!-- Estilos Bootstrap y AOS -->
   <link rel="stylesheet" href="css/estilos.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
 
+  <!-- Estilo personalizado directo -->
+  <style>
+    body {
+      background-color: #1b1f2a;
+      color: hsl(0, 40%, 36%);
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    h1, h2, h3 {
+      color: #01110e;
+    }
+
+    .navbar {
+      background: lab(37.97% -36.05 14.93) !important;
+      box-shadow: 0 4px 10px rgba(0, 255, 200, 0.2);
+    }
+
+    .navbar-brand img {
+      height: 60px;
+    }
+
+    .carousel-img {
+      max-height: 500px;
+      object-fit: cover;
+    }
+
+    section {
+      padding: 60px 15px;
+    }
+
+    .mission-vision-card {
+      background: linear-gradient(145deg, #232c3f, #2f3e56);
+      box-shadow: 0 8px 20px rgba(0, 255, 200, 0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .mission-vision-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 12px 25px rgba(0, 255, 200, 0.25);
+    }
+
+    .card-title, .card-text, p, li {
+      color: #cfdce2;
+    }
+
+    .card-title {
+      font-size: 1.3rem;
+      color: #00ffc3;
+    }
+
+    ul li::marker {
+      color: #00ffc3;
+    }
+
+    footer {
+      background: #0f172a;
+      border-top: 2px solid #00ffc3;
+    }
+
+    footer p {
+      margin-bottom: 0.5rem;
+    }
+
+    footer a:hover {
+      color: #00ffc3 !important;
+    }
+  </style>
 </head>
 <body>
 
-
-<nav>
-  <div class="nav-container">
-    <a href="index.html">
-      <img src="img/logo_sin_fondo.png" alt="Logo Cooperativa" class="logo">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">
+      <img src="img/logo_sin_fondo.png" alt="Logo Cooperativa">
     </a>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="historia.html">Historia</a></li>
-      <li><a href="servicios.html">Servicios</a></li>
-      <li><a href="contacto.php">Contacto</a></li>
-    </ul>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="menuNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="historia.html">Historia</a></li>
+        <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="contacto.php">Contacto</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
-
-<div id="carruselEmpresa" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+<!-- Carrusel -->
+<div id="carruselEmpresa" class="carousel slide carousel-fade mb-4" data-bs-ride="carousel" data-bs-interval="5000">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/logo_sin_fondo.png" class="d-block w-100 carousel-img">
+      <img src="img/servicio_cal.jpg" class="d-block w-100 carousel-img" alt="Logo">
     </div>
     <div class="carousel-item">
-      <img src="img/campo.jpg" class="d-block w-100 carousel-img">
+      <img src="img/campo.jpg" class="d-block w-100 carousel-img" alt="Campo">
     </div>
     <div class="carousel-item">
-      <img src="img/super_ferr.jpg" class="d-block w-100 carousel-img">
+      <img src="img/super_ferr.jpg" class="d-block w-100 carousel-img" alt="Servicios">
+    </div>
+
+    <div class="carousel-item">
+      <img src="img/cosecha_dron.jpg" class="d-block w-100 carousel-img" alt="Cosecha">
     </div>
     <div class="carousel-item">
-      <img src="img/cosecha_dron.jpg" class="d-block w-100 carousel-img">
+      <img src="img/cosecha_dron.jpg" class="d-block w-100 carousel-img" alt="Cosecha">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carruselEmpresa" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="carousel-control-prev-icon"></span>
     <span class="visually-hidden">Anterior</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carruselEmpresa" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="carousel-control-next-icon"></span>
     <span class="visually-hidden">Siguiente</span>
   </button>
 </div>
 
-<!-- Sección de contenido -->
-<section>
-  <h1>¿Quiénes somos?</h1>
-  <p>Somos una Cooperativa fundada el 3 de noviembre de 1960 por inmigrantes japoneses con el sueño de crear una comunidad fuerte y autosuficiente basada en la agricultura. Fuimos reconocidos legalmente por la Resolución No. 127 del Ministerio de Agricultura y Ganadería y actualmente nos regimos bajo la Ley No. 438/94.</p>
-  <p>Estamos asociados a la Central de Cooperativas NIKKEI, FECOPROD, BANCOR, ECOP y PRODUSUR.</p>
+<!-- ¿Quiénes somos? -->
+<section data-aos="fade-up">
+  <h1 class="text-center mb-4 text-dark">¿Quiénes somos?</h1>
+  <p class="text-dark">
+    Somos una Cooperativa fundada el 3 de noviembre de 1960 por inmigrantes japoneses con el sueño de crear una comunidad fuerte y autosuficiente basada en la agricultura. Fuimos reconocidos legalmente por la Resolución No. 127 del Ministerio de Agricultura y Ganadería y actualmente nos regimos bajo la Ley No. 438/94.
+  </p>
+  <p class="text-dark">
+    Estamos asociados a la Central de Cooperativas NIKKEI, FECOPROD, BANCOR, ECOP y PRODUSUR.
+  </p>
+</section>
 
-  <h2>Nuestra Misión</h2>
-  <p>Mejorar la calidad de vida de nuestros asociados brindando asistencia técnica, insumos, acopio y comercialización de sus productos, apostando al desarrollo tanto de los socios como de toda la comunidad.</p>
 
-  <h2>Nuestra Visión</h2>
-  <p>Ser una cooperativa reconocida por su compromiso con el desarrollo integral de sus asociados, sus familias y la comunidad en general.</p>
+<!-- Misión y Visión -->
+<section class="container" data-aos="fade-up">
+  <div class="row g-4">
+    <div class="col-md-6">
+      <div class="card h-100 border-0 rounded-4 mission-vision-card">
+        <div class="card-body">
+          <div class="text-center mb-3">
+            <i class="bi bi-bullseye text-success display-4"></i>
+          </div>
+          <h3 class="text-center text-white mb-3 border-bottom border-success pb-2">Nuestra Misión</h3>
+          <p>Mejorar la calidad de vida de nuestros asociados brindando asistencia técnica, insumos, acopio y comercialización de sus productos, apostando al desarrollo tanto de los socios como de toda la comunidad.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card h-100 border-0 rounded-4 mission-vision-card">
+        <div class="card-body">
+          <div class="text-center mb-3">
+            <i class="bi bi-eye text-primary display-4"></i>
+          </div>
+          <h3 class="text-center text-white mb-3 border-bottom border-primary pb-2">Nuestra Visión</h3>
+          <p>Ser una cooperativa reconocida por su compromiso con el desarrollo integral de sus asociados, sus familias y la comunidad en general.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <h2>Valores</h2>
-  <p>Responsabilidad, solidaridad, democracia, equidad, igualdad, ayuda mutua, honestidad, transparencia, responsabilidad social y esfuerzo propio.</p>
+<!-- Valores -->
+<section data-aos="fade-right">
+  <h2 class="text-center mb-4">Valores</h2>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card shadow-sm h-100 border-0 rounded-4 mission-vision-card">
+        <div class="card-body text-center">
+          <i class="bi bi-people-fill display-5 text-info mb-2"></i>
+          <h5 class="card-title">Solidaridad</h5>
+          <p class="card-text">Nos ayudamos mutuamente como comunidad.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card shadow-sm h-100 border-0 rounded-4 mission-vision-card">
+        <div class="card-body text-center">
+          <i class="bi bi-shield-check display-5 text-info mb-2"></i>
+          <h5 class="card-title">Transparencia</h5>
+          <p class="card-text">Actuamos con honestidad y claridad en todo momento.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card shadow-sm h-100 border-0 rounded-4 mission-vision-card">
+        <div class="card-body text-center">
+          <i class="bi bi-balance-scale display-5 text-info mb-2"></i>
+          <h5 class="card-title">Equidad</h5>
+          <p class="card-text">Ofrecemos igualdad de oportunidades para todos los socios.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <h2>Responsabilidad Social</h2>
-  <ul>
-    <li>Adaptación a la Ley Nº 294/93 para la evaluación de impacto ambiental en todas las fincas.</li>
-    <li>Participación activa en la Alianza Ambiental de Itapúa y el Consejo de Aguas del Arroyo Pirapó.</li>
-    <li>Uso del sistema de Siembra Directa en el 100% de las parcelas.</li>
-    <li>Donación de un depósito para tratamiento de envases de agroquímicos en el vertedero municipal.</li>
-    <li>Apoyo económico a instituciones educativas del distrito, incluyendo la construcción de sanitarios escolares.</li>
-    <li>Reforestación con especies nativas y exóticas por parte de la cooperativa y sus asociados.</li>
+<!-- Responsabilidad Social -->
+<section data-aos="fade-up">
+  <h2 class="text-center mb-4 text-dark">Responsabilidad Social</h2>
+  <ul class="text-dark">
+    <li class="text-dark">Evaluación de impacto ambiental según la Ley Nº 294/93.</li>
+    <li class="text-dark">Participación en la Alianza Ambiental de Itapúa y Consejo de Aguas.</li>
+    <li class="text-dark">100% de uso del sistema de Siembra Directa.</li>
+    <li class="text-dark">Depósito para envases de agroquímicos donado al vertedero.</li>
+    <li class="text-dark">Apoyo a instituciones educativas del distrito.</li>
+    <li class=" text-dark">Reforestación con especies nativas y exóticas.</li>
   </ul>
 </section>
 
-<!-- Pie de página -->
-<footer>© 2025 Cooperativa Pirapó Agrícola Ltda.</footer>
 
+<!-- Pie de página -->
+<footer class="text-white text-center py-4 mt-5">
+  <p>© 2025 Cooperativa Pirapó Agrícola Ltda.</p>
+  <div class="d-flex justify-content-center gap-4">
+    <a href="#" class="text-white"><i class="bi bi-facebook fs-4"></i></a>
+    <a href="#" class="text-white"><i class="bi bi-instagram fs-4"></i></a>
+    <a href="#" class="text-white"><i class="bi bi-whatsapp fs-4"></i></a>
+  </div>
+</footer>
+
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>AOS.init();</script>
 </body>
 </html>
