--- a/historia.html
+++ b/historia.html
@@ -13,85 +13,154 @@
 
   <style>
     body {
-      background-color: #1b1f2a;
-      color: #cfdce2;
-      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9f9f9;
+      color: #2b2b2b;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 400;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      scroll-behavior: smooth;
     }
 
-    h1, h2 {
-      color: #00ffc3;
+    h1 {
+      color: #2b6777;
+      font-weight: 700;
+      font-size: 2.5rem;
+      text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      transition: color 0.3s ease;
+    }
+
+    h1:hover {
+      color: #38b6ff; /* Cambia el color al pasar el mouse */
+    }
+
+    h2 {
+      color: #2b6777;
+      font-weight: 600;
+      font-size: 1.8rem;
+      margin-bottom: 15px;
+      text-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      transition: color 0.3s ease;
+    }
+
+    h2:hover {
+      color: #38b6ff; /* Cambia el color al pasar el mouse */
     }
 
     .navbar {
-      background: lab(37.97% -36.05 14.93);
-      box-shadow: 0 4px 10px rgba(0, 255, 200, 0.2);
+      background-color: #1f1f1f;
+      padding: 1rem 0;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
 
-    .navbar-brand img {
-      height: 60px;
+    .navbar .nav-link {
+      color: #eaeaea;
+      font-size: 1.1rem;
+      transition: color 0.3s ease;
+    }
+
+    .navbar .nav-link.active,
+    .navbar .nav-link:hover {
+      color: #38b6ff;
+    }
+
+    .container,
+    .nav-container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 0 15px;
     }
 
     section {
-      padding: 60px 15px;
+      padding: 80px 15px;
     }
 
     .block {
-      background: linear-gradient(145deg, #232c3f, #2f3e56);
-      border-radius: 1.2rem;
-      box-shadow: 0 8px 20px rgba(0, 255, 200, 0.15);
-      margin-bottom: 40px;
-      overflow: hidden;
-    }
-
-    .block img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .block-content {
-      padding: 30px;
+      background: #ffffff;
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+      margin-bottom: 50px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 30px;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
 
     .block:hover {
-      transform: translateY(-6px);
-      transition: all 0.3s ease;
-      box-shadow: 0 12px 25px rgba(0, 255, 200, 0.25);
+      transform: translateY(-5px);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      background-color: rgba(240, 248, 255, 0.5); /* Efecto de fondo suave al pasar el mouse */
+    }
+
+    .block img {
+      max-width: 400px;
+      width: 100%;
+      height: auto;
+      border-radius: 1rem;
+    }
+
+    @media (max-width: 768px) {
+      .block {
+        flex-direction: column;
+      }
+
+      .block img {
+        border-radius: 1rem 1rem 0 0;
+      }
+    }
+
+    .block-content {
+      flex: 1;
+      padding: 25px 30px;
     }
 
     .text-justify {
       text-align: justify;
+      font-size: 1.1rem;
+      line-height: 1.5;
+    }
+
+    .lead {
+      font-size: 1.5rem;
+      font-weight: 300;
+      max-width: 720px;
+      margin: 0 auto;
+      color: #555;
+      text-align: center;
     }
 
     footer {
-      background: #0f172a;
-      border-top: 2px solid #00ffc3;
+      background-color: #2b6777;
+      color: #fff;
+      text-align: center;
+      padding: 30px 15px;
     }
 
-    footer a:hover {
-      color: #00ffc3 !important;
+    .social-icons a {
+      color: #ffffff;
+      transition: color 0.3s, transform 0.3s;
+    }
+
+    .social-icons a:hover {
+      color: #ffe53b;
+      transform: scale(1.2);
     }
   </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <img src="img/logo_sin_fondo.png" alt="Logo Cooperativa">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="menuNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link active" href="historia.html">Historia</a></li>
-        <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="contacto.php">Contacto</a></li>
-      </ul>
-    </div>
+<nav>
+  <div class="nav-container">
+    <a href="index.html"><img src="img/logo_sin_fondo.png" alt="Logo Cooperativa" class="logo" /></a>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="historia.html" class="active" aria-current="page">Historia</a></li>
+      <li><a href="servicios.html">Servicios</a></li>
+      <li><a href="contacto.php">Contacto</a></li>
+    </ul>
   </div>
 </nav>
 
@@ -103,60 +172,57 @@
   </div>   
 </section>
 
-<!-- Bloque 1: Fundación -->
+<!-- Bloques de contenido -->
 <section data-aos="fade-up">
   <div class="container">
     <div class="block">
-      <img src="img/inmigrantes.jpg" style="width: 400px; justify-content: center;" alt="Fundadores de la cooperativa">
+      <img src="img/inicios.png" alt="Llegada de los inmigrantes" />
       <div class="block-content">
-        <h2><i class="bi bi-flag me-2"></i>Fundación en 1960</h2>
+        <h2><i class="bi bi-flag me-2"></i>Orígenes y Fundación</h2>
         <p class="text-justify">
-          La Cooperativa Pirapó fue fundada el 3 de noviembre de 1960 por inmigrantes japoneses con el objetivo de crear una comunidad agrícola próspera. Estos pioneros trabajaron juntos para superar los desafíos iniciales de una región con poca infraestructura.
+          El 2 de agosto de 1960, llegaron los primeros inmigrantes japoneses a la Colonia Alto Paraná. Poco después, el 3 de noviembre, se realizó la primera asamblea en Aca Carayá. En esa histórica reunión se fundó oficialmente la “Cooperativa 1ª Limitada Agropecuaria Alto Paraná”, con la elección del Consejo de Administración y aprobación de principios y valores cooperativos.
         </p>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Bloque 2: Reconocimiento Legal -->
 <section data-aos="fade-up">
   <div class="container">
     <div class="block">
-      <img src="img/resolucion127.jpg" alt="Resolución ministerial">
+      <img src="img/inmigrantes.jpg" alt="Primera Junta Directiva" />
+      <div class="block-content">
+        <h2><i class="bi bi-people-fill me-2"></i>Primeros Líderes</h2>
+        <p class="text-justify">
+          En la primera reunión general del 3 de noviembre, se eligieron a los líderes: Toshinao Fujiwara como presidente, Masahito Shinoto como gerente general, e Isamu Takaoka como presidente del Consejo de Vigilancia. También se aprobó el plan de trabajo y se estableció una oficina en el depósito N.º 1 de Aca Carayá.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section data-aos="fade-up">
+  <div class="container">
+    <div class="block">
+      <img src="img/logo_sin_fondo.png" alt="Resolución y reconocimiento legal" />
       <div class="block-content">
         <h2><i class="bi bi-file-earmark-text me-2"></i>Reconocimiento Legal</h2>
         <p class="text-justify">
-          El 6 de marzo de 1961, la cooperativa fue reconocida oficialmente mediante la Resolución N.º 127 del Ministerio de Agricultura y Ganadería, lo que marcó el inicio de su camino formal hacia el desarrollo regional.
+          El 18 de marzo de 1961 se celebró la primera asamblea extraordinaria, donde se aprobó cambiar el nombre a “Sociedad Cooperativa Agropecuaria Alto Paraná Limitada”. Luego, el 6 de octubre del mismo año, el Ministerio de Agricultura y Ganadería aprobó oficialmente el nombre actual: <strong>“Sociedad Cooperativa Pirapó Agrícola Limitada”</strong>.
         </p>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Bloque 3: Expansión y Tecnología -->
 <section data-aos="fade-up">
   <div class="container">
     <div class="block">
-      <img src="img/expansion.jpg" alt="Maquinaria agrícola">
+      <img src="img/inmigrantes2.jpg" alt="Primeros cultivos" />
       <div class="block-content">
-        <h2><i class="bi bi-gear-wide-connected me-2"></i>Expansión y Tecnología</h2>
+        <h2><i class="bi bi-flower2 me-2"></i>Inicios Productivos</h2>
         <p class="text-justify">
-          Durante los años 70 y 80, la cooperativa apostó por la mecanización agrícola, capacitaciones técnicas y diversificación de cultivos, consolidando su liderazgo en la región como una institución moderna y comprometida con el progreso.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Bloque 4: Cooperativa Hoy -->
-<section data-aos="fade-up">
-  <div class="container">
-    <div class="block">
-      <img src="img/actualidad.jpg" alt="Sede actual de la cooperativa">
-      <div class="block-content">
-        <h2><i class="bi bi-building me-2"></i>La Cooperativa Hoy</h2>
-        <p class="text-justify">
-          Actualmente, la Cooperativa Pirapó es referente en el país por su compromiso con el desarrollo sostenible, los valores solidarios y la mejora continua de sus servicios para socios, productores y la comunidad en general.
+          Tras fundarse la cooperativa, los inmigrantes comenzaron a trabajar la tierra. Los primeros cultivos incluyeron tung, yerba mate y kiri. Más tarde, se introdujeron cultivos de ciclo corto como algodón, maíz, maní y frijol. En 1962, la colonia produjo su primera cosecha de soja, marcando el inicio del desarrollo agrícola sostenible.
         </p>
       </div>
     </div>
@@ -164,18 +230,19 @@
 </section>
 
 <!-- Pie de página -->
-<footer class="text-white text-center py-4 mt-5">
+<footer>
   <p>© 2025 Cooperativa Pirapó Agrícola Ltda.</p>
-  <div class="d-flex justify-content-center gap-4">
-    <a href="#" class="text-white"><i class="bi bi-facebook fs-4"></i></a>
-    <a href="#" class="text-white"><i class="bi bi-instagram fs-4"></i></a>
-    <a href="#" class="text-white"><i class="bi bi-whatsapp fs-4"></i></a>
-  </div>
+  <nav class="social-icons" aria-label="Redes sociales">
+    <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+    <a href="#" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+  </nav>
 </footer>
 
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script>AOS.init({ once: true });</script>
+<script>
+  AOS.init({ once: true });
+</script>
 </body>
 </html>
