--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
 
     .carousel-img {
-      max-height: 500px;
+      max-height: 650px;
       object-fit: cover;
     }
 
@@ -196,7 +196,7 @@
     <div class="col">
       <div class="card shadow-sm h-100 border-0 rounded-4 mission-vision-card">
         <div class="card-body text-center">
-          <i class="bi bi-balance-scale display-5 text-info mb-2"></i>
+          <i class="bi bi-diagram-3 display-5 text-info mb-2"></i>
           <h5 class="card-title">Equidad</h5>
           <p class="card-text">Ofrecemos igualdad de oportunidades para todos los socios.</p>
         </div>
